unpackaged/main/default/objects/Product_Inventory__c/Product_Inventory__c.object-meta.xml
<CustomObject>
    <label>Product Inventory</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Product Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>