unpackaged/main/default/objects/Product_Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Inventories</relationshipLabel>
    <relationshipName>Product_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>