unpackaged/main/default/objects/Product_Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>Low Stock</fullName>
            </value>
            <value>
                <fullName>No Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>